<resources>
    <string name="app_name">UF1_Proyecto_Sonidos</string>
    <string name="sounds_title">Sounds</string>
    <string name="upload_title">Upload</string>
    <string name="delete_title">Delete</string>
    <string name="favorites_title">Favorites</string>
    <string name="sound_effects_title">SOUND EFFECTS</string>
    <string name="audio_options_title">AUDIO OPTIONS</string>
    <string name="filters_title">FILTERS</string>
    <string name="equalizer_title">Equalizer</string>
    <string name="volume_title">Volume</string>
    <string name="speed_title">Speed</string>
    <string name="upload_sound_title">UPLOAD A SOUND</string>
    <string name="delete_sound_title">DELETE A SOUND</string>
    <string name="upload_category_title">ADD A NEW CATEGORY</string>
    <string name="delete_category_title">DELETE A CATEGORY</string>
    <string name="name_title">Name</string>
    <string name="category_title">Category</string>
    <string name="categories_title">CATEGORIES</string>
    <string name="sound_name_hint">Sound Name…</string>
    <string name="category_name_hint">Category Name…</string>
    <string name="path_title">Select a Sound</string>
    <string name="add_sound_button_title">Upload Sound</string>
    <string name="add_category_button_title">Add Category</string>
    <string name="data_uploaded_toast">Data Uploaded</string>
    <string name="data_deleted_toast">Deleted Data</string>
    <string name="empty_data_toast">You need to fill in all fields</string>
    <string name="delete_sound_hint">Enter the id…</string>
</resources>